# bitguarden

./: .gitignore  .travis.yml  README.md  app  com.github.denispalchuk.bitguarden.json  meson.build
data/: com.github.denispalchuk.bitguarden.appdata.xml  com.github.denispalchuk.bitguarden.desktop  com.github.denispalchuk.bitguarden.gresource.xml  com.github.denispalchuk.bitguarden.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: com.github.liljebergxyz.valawarden.pot
src/: Application.vala  Window.vala  meson.build
src/configs/: Constants.vala
src/controllers/: AppController.vala
src/dialogs/: LoginDialog.vala
src/models/: Cipher.vala  Folder.vala  FolderCollection.vala  State.vala  Store.vala  Totp.vala  Vault.vala
src/sdks/: BitwardenSDK.vala
src/services/: VaultService.vala
src/utils/: Crypto.vala  IO.vala  NetworkUtils.vala
src/views/: AppView.vala  QuickView.vala  VaultView.vala
src/widgets/: CipherHeader.vala  CipherItem.vala  CipherList.vala  CipherPage.vala  CircularProgressBar.vala  EntryWithLabel.vala  HeaderBar.vala  OTPPanel.vala  PasswordView.vala  SecureNoteView.vala  Sidebar.vala  TotpGrid.vala
